# metis

./: Cargo.toml
.metis/initiatives/METIS-I-0030/: initiative.md
.metis/initiatives/METIS-I-0030/tasks/: METIS-T-0117.md  METIS-T-0118.md  METIS-T-0119.md  METIS-T-0120.md  METIS-T-0121.md  METIS-T-0122.md  METIS-T-0123.md  METIS-T-0124.md
crates/metis-docs-cli/.metis/designs/: TEST-D-0001.md
crates/metis-docs-cli/src/: cli.rs
crates/metis-docs-cli/src/commands/: list.rs  mod.rs  view.rs
crates/metis-docs-cli/src/commands/create/: design.rs  mod.rs
crates/metis-docs-core/src/: lib.rs
crates/metis-docs-core/src/application/services/: database.rs  synchronization.rs  template.rs
crates/metis-docs-core/src/application/services/document/: creation.rs  discovery.rs  validation.rs
crates/metis-docs-core/src/application/services/workspace/: archive.rs  transition.rs
crates/metis-docs-core/src/dal/database/: configuration_repository.rs
crates/metis-docs-core/src/domain/: configuration.rs
crates/metis-docs-core/src/domain/documents/: factory.rs  mod.rs  types.rs
crates/metis-docs-core/src/domain/documents/design/: acceptance_criteria.md  content.md  frontmatter.yaml  mod.rs
crates/metis-docs-core/src/templates/design/: frontmatter.yaml
crates/metis-docs-gui/src-tauri/: tauri.conf.json
crates/metis-docs-mcp/: instructions.md
crates/metis-docs-mcp/src/tools/: create_document.rs  list_documents.rs  search_documents.rs  transition_phase.rs
crates/metis-docs-mcp/tests/: design_lifecycle_test.rs
